# TecFlix

./: CMakeLists.txt  main.cpp
CSV/: CSV_Reader.cpp  movie_metadata.csv
GUI/: windowGUI.cpp  windowGUI.h
HTML/: Data.cpp  Image_getter.cpp  Image_getter.h
LinkedList/: String_List.cpp  String_List.h  String_Node.cpp  String_Node.h
Recycle_Bin/: CSV_Reader.h  Data.h  FileDownloader.cpp  FileDownloader.h  HTML_Parser.cpp  HTTPDownloader.cpp  HTTPDownloader.h  ImgDownloader.cpp  ImgDownloader.h  Iterator.cpp  List.cpp  Node.cpp  Recycle
